--- a/basket.html
+++ b/basket.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <div>
-        <h1>AQUA</h1>
+    <div class="container">
+        <h1>AKQA</h1>
         <h2>Your Basket</h2>
         <p>Items you have added to your basket are shown below.</p>
         <p>Adjust the quantities or remove items before counting your purchase</p>
 
         <table>
-            <tr>
+            <tr class="header">
                 <th>Product</th>
                 <th>Price</th>
                 <th>Qty</th>
@@ -48,16 +48,16 @@
             </tr>
             <tr></tr>
             <tr>
-                <td>Subtotal</td>
+                <td colspan="3">Subtotal</td>
                 <td>$11.96</td>
             </tr>
             <tr>
-                <td>VAT @ 20%</td>
+                <td colspan="3">VAT @ 20%</td>
                 <td>$2.39</td>
             </tr>
             <tr></tr>
             <tr>
-                <td>Total Cost</td>
+                <td colspan="3">Total Cost</td>
                 <td>$14.35</td>
             </tr>
         </table>
